feat(partner): cu as partner
